Tests/a1/reject/11.ul
int main (int x) {
	int[3+3] x;
}